--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="public/css/main.css" />
     <title>Andrew's Portfolio</title>
   </head>
   <body>
     <h1>New Portfolio page</h1>
+    <h2>Cool</h2>
   </body>
 </html>
