--- a/index.html
+++ b/index.html
@@ -8,7 +8,110 @@
     <title>Andrew's Portfolio</title>
   </head>
   <body>
-    <h1>New Portfolio page</h1>
-    <h2>Cool</h2>
+    <h1>Andrew DiBiase</h1>
+    <div class="about-container">
+      <h2>About Me</h2>
+      <p>
+        Welcome to my portfolio page. I'd like to say thank you, for spending
+        some of your valuable time to view my portfolio. Born in the prarie
+        lands of Winnipeg Manitoba, and currently located in the most beautiful
+        place in Canada, Vancouver, British Columbia.
+      </p>
+      <div class="traits-container">
+        <h3>Personal Traits</h3>
+        <ul>
+          <li>Dependable</li>
+          <p>
+            No matter what, I'll do anything in my power to get the job done on
+            time, to the best of my ability.
+          </p>
+          <li>Creative Solutions</li>
+          <p>
+            When stuck, I try to achieve solutions on my own, while being time
+            concious. If I still cannot find the solution and find myself taking
+            up enough time, I'll do 1 of 2 things: formulate a simplified
+            question to ask my superior or move my focus onto a different
+            problem and return later.
+          </p>
+          <li>Strong Communication</li>
+          <p>
+            Past experience of sales gives me the ability to communicate
+            efficiently.
+          </p>
+          <li>Work well in teams</li>
+          <p>
+            My communication skills provide me with the ability to work along
+            side many different types of individuals and succeed.
+          </p>
+          <li>Work well individually</li>
+          <p>
+            Worked doing door to door sales for telus, during 6 months of my
+            life. It was just me, and a whole neighboorhood of doors to knock
+            on. I would find different ways to keep myself motivated even on the
+            coldest of winter days.
+          </p>
+          <li>Adaptable</li>
+          <p>
+            Throughout my life, I learnt that no matter what uncomfortable
+            situation I am in. I will always find a way to overcome it, by
+            adjusting to each situation and being open to change. This is when
+            my best learning takes place.
+          </p>
+          <li>Organizational</li>
+          <p>
+            As I get older, I realize that organization is key to success.
+            "Measure twice and cut once" is a favorite proverb of mine and I
+            apply it to any project I work on, noticing that if I spend more
+            time planning, the work takes less time equalling to lower total
+            time.
+          </p>
+        </ul>
+      </div>
+      <h3>Technical Skills</h3>
+      <ul class="technical-skills">
+        <li>HTML 5</li>
+        <li>CSS3 (SCSS)</li>
+        <li>JavaScript (jQuery)</li>
+        <li>Custom WordPress Themes and Plugins</li>
+        <li>Git and GitHub</li>
+        <li>Node.js</li>
+        <li>React</li>
+        <li>React Native</li>
+        <li>Graph QL</li>
+        <li>Redux</li>
+        <li>Meteor</li>
+        <li>Mongo DB</li>
+        <li>JSON</li>
+        <li>REST API</li>
+        <li>Gulp</li>
+      </ul>
+      <h3>Hobbies</h3>
+      <ol class="hobby-container">
+        <div class="hobby-block">
+          <li>Sports</li>
+          <p>
+            Top sports: Hockey, Soccer, Basketball, playing Football, and
+            eSports of course. Top teams include: Juventus(soccer), Vancouver
+            Canucks(NHL), and Toronto Raptors(NBA).
+          </p>
+        </div>
+        <div class="hobby-block">
+          <li>Video Games</li>
+          <p>
+            Very interested in the eSports world, watching and playing.
+            Currently my top games are Apex Legends, and Call of Duty. I enjoy
+            any first person shooter.
+          </p>
+        </div>
+        <div class="hobby-block">
+          <li>Technology</li>
+          <p>
+            This hobby is what got me into development, I find tech very
+            intriguing. Up and coming Technology that may change our world, the
+            next big app, these are some of the things of tech that excite me.
+          </p>
+        </div>
+      </ol>
+    </div>
   </body>
 </html>
