add shape to traits and add photo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Andrew's Portfolio</title>
   </head>
   <body>
-    <h1>Andrew DiBiase</h1>
+    <div class="header-container">
+      <h1>Andrew DiBiase</h1>
+      <div class="image-container">
+        <img src="images/andrewuppershot.jpg" />
+      </div>
+    </div>
     <div class="about-container">
       <h2>About Me</h2>
       <p>
@@ -17,14 +22,17 @@
         lands of Winnipeg Manitoba, and currently located in the most beautiful
         place in Canada, Vancouver, British Columbia.
       </p>
-      <div class="traits-container">
-        <h3>Personal Traits</h3>
-        <ul>
+
+      <h3>Personal Traits</h3>
+      <ul class="traits-container">
+        <div class="single-trait">
           <li>Dependable</li>
           <p>
             No matter what, I'll do anything in my power to get the job done on
             time, to the best of my ability.
           </p>
+        </div>
+        <div class="single-trait">
           <li>Creative Solutions</li>
           <p>
             When stuck, I try to achieve solutions on my own, while being time
@@ -33,16 +41,22 @@
             question to ask my superior or move my focus onto a different
             problem and return later.
           </p>
+        </div>
+        <div class="single-trait">
           <li>Strong Communication</li>
           <p>
             Past experience of sales gives me the ability to communicate
             efficiently.
           </p>
+        </div>
+        <div class="single-trait">
           <li>Work well in teams</li>
           <p>
             My communication skills provide me with the ability to work along
             side many different types of individuals and succeed.
           </p>
+        </div>
+        <div class="single-trait">
           <li>Work well individually</li>
           <p>
             Worked doing door to door sales for telus, during 6 months of my
@@ -50,6 +64,8 @@
             on. I would find different ways to keep myself motivated even on the
             coldest of winter days.
           </p>
+        </div>
+        <div class="single-trait">
           <li>Adaptable</li>
           <p>
             Throughout my life, I learnt that no matter what uncomfortable
@@ -57,6 +73,8 @@
             adjusting to each situation and being open to change. This is when
             my best learning takes place.
           </p>
+        </div>
+        <div class="single-trait">
           <li>Organizational</li>
           <p>
             As I get older, I realize that organization is key to success.
@@ -65,8 +83,14 @@
             time planning, the work takes less time equalling to lower total
             time.
           </p>
-        </ul>
-      </div>
+        </div>
+        <div class="single-trait">
+          <li>Working Under Pressure</li>
+          <p>
+            When crunch time arrives, I put my head down and get the job done.
+          </p>
+        </div>
+      </ul>
       <h3>Technical Skills</h3>
       <ul class="technical-skills">
         <li>HTML 5</li>
