add 2 extra pages and build sidebar

--- a/index.html
+++ b/index.html
@@ -8,20 +8,47 @@
     <title>Andrew's Portfolio</title>
   </head>
   <body>
-    <div class="header-container">
+    <aside class="sidebar-container">
       <h1>Andrew DiBiase</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">About</a></li>
+          <li><a href="projects.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
       <div class="image-container">
         <img src="images/andrewuppershot.jpg" />
       </div>
-    </div>
-    <div class="about-container">
+    </aside>
+
+    <main class="about-container">
       <h2>About Me</h2>
       <p>
         Welcome to my portfolio page. I'd like to say thank you, for spending
         some of your valuable time to view my portfolio. Born in the prarie
         lands of Winnipeg Manitoba, and currently located in the most beautiful
-        place in Canada, Vancouver, British Columbia.
+        place in Canada. Vancouver, British Columbia.
       </p>
+
+      <h3>Technical Skills</h3>
+      <ul class="technical-skills">
+        <li>HTML 5</li>
+        <li>CSS3 (SCSS)</li>
+        <li>JavaScript (jQuery)</li>
+        <li>Custom WordPress Themes and Plugins</li>
+        <li>Git and GitHub</li>
+        <li>Node.js</li>
+        <li>React</li>
+        <li>React Native</li>
+        <li>Graph QL</li>
+        <li>Redux</li>
+        <li>Meteor</li>
+        <li>Mongo DB</li>
+        <li>JSON</li>
+        <li>REST API</li>
+        <li>Gulp</li>
+      </ul>
 
       <h3>Personal Traits</h3>
       <ul class="traits-container">
@@ -50,14 +77,14 @@
           </p>
         </div>
         <div class="single-trait">
-          <li>Work well in teams</li>
+          <li>Work Well in Team Environments</li>
           <p>
             My communication skills provide me with the ability to work along
             side many different types of individuals and succeed.
           </p>
         </div>
         <div class="single-trait">
-          <li>Work well individually</li>
+          <li>Work Well Individually</li>
           <p>
             Worked doing door to door sales for telus, during 6 months of my
             life. It was just me, and a whole neighboorhood of doors to knock
@@ -91,24 +118,6 @@
           </p>
         </div>
       </ul>
-      <h3>Technical Skills</h3>
-      <ul class="technical-skills">
-        <li>HTML 5</li>
-        <li>CSS3 (SCSS)</li>
-        <li>JavaScript (jQuery)</li>
-        <li>Custom WordPress Themes and Plugins</li>
-        <li>Git and GitHub</li>
-        <li>Node.js</li>
-        <li>React</li>
-        <li>React Native</li>
-        <li>Graph QL</li>
-        <li>Redux</li>
-        <li>Meteor</li>
-        <li>Mongo DB</li>
-        <li>JSON</li>
-        <li>REST API</li>
-        <li>Gulp</li>
-      </ul>
       <h3>Hobbies</h3>
       <ol class="hobby-container">
         <div class="hobby-block">
@@ -136,6 +145,6 @@
           </p>
         </div>
       </ol>
-    </div>
+    </main>
   </body>
 </html>
